--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- HEADER section   -->
+<!-- bottom section -->
     <header class="sticky">
         <a href="#" class="logo">portfolio </a>
         
